doc create and delete customer
